src/test/deca/context/valid/created/exp_bin/op_bool/and.deca
// Description :
//    test de l'opérateur and
//
// Resultats :
//		Ok

{
boolean a;
boolean b;
b = true && true;
b = false && false;
b = false && true;
b = true && false;
b = a && a;
b = b && a;
b = a && b;
}