src/test/deca/context/invalid/created/binary_exp/op_comp/gt_int_boolean.deca
// Description :
//    test gt entre un int et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Opérandes de type int, boolean, attendu: ‘int’ ou ‘float’

{
int a;
boolean b;
boolean c = a > b;
}
